syntax = "proto3";

package todo;

import "google/protobuf/empty.proto";

enum Status {
  TO_DO = 0;
  IN_PROGRESS = 1;
  DONE = 2;
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  Status status = 4;
}

message TaskId {
  int32 id = 1;
}

message TaskList {
  repeated Task tasks = 1;
}

service TodoService {
  rpc CreateTask(Task) returns (Task);
  rpc GetTask(TaskId) returns (Task);
  rpc ListTasks(google.protobuf.Empty) returns (TaskList);
  rpc UpdateTask(Task) returns (Task);
  rpc DeleteTask(TaskId) returns (google.protobuf.Empty);
}
